--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   provider: ^6.1.2
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
+  firebase_core: ^3.0.0
+  cloud_firestore: ^5.0.0
+  firebase_auth: ^5.0.0
+
 
 dev_dependencies:
   flutter_test:
